# CIT-RAWR-api

./: .gitignore  README.md  bigseed.json  pyproject.toml  seed.json
backend/: constants.py  settings.py  urls.py
backend/reservations/: admin.py  choices.py  models.py  querysets.py  serializers.py  urls.py  views.py
backend/reservations/migrations/: 0001_initial.py  0002_auto_20201126_0843.py  0002_auto_20201129_0443.py  0002_roomimage.py  0003_auto_20201126_2159.py  0003_auto_20201130_0616.py  0004_auto_20201201_0305.py  0005_auto_20201210_1841.py  0005_auto_20201214_1617.py  0006_merge_20201214_1624.py  0006_notification.py
backend/users/: admin.py  choices.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_userprofile_display_name.py
